# poly_matrix

./: .gitignore  README.md  environment.yml  example.py  poly_matrix.py  requirements.txt  setup.cfg
_test/: test_cost.py  test_interpret.py  test_ls.py  test_optimize.py  test_poly_matrix.py  test_prob_1.pkl
optimize/: optimize.py
poly_matrix/: __init__.py  cost_matrix.py  least_squares_problem.py  poly_matrix.py
