[metadata]
name = poly_matrix
version = 0.0.2
authors = [
    {name = "Frederike Dümbgen", email = "frederike.dumbgen@utoronto.ca" },
    {name = "Connor Holmes", email = "connor.holmes@mail.utoronto.ca" }]
description = Code for efficient handling of sparse matrices
long_description = file : README.md
long_description_content_type = text/markdown
readme = "README.md"
license = { file="LICENSE" }

[project.urls]
"Homepage" = "https://github.com/utiasASRL/poly_matrix.git"

[options]
packages = find:
install_requires=
  scipy

[options.packages.find] # do not mistake tests/ for a package directory
exclude=_test*

[flake8]
ignore = W292, W391, F541, F841, 
exclude = _notebooks/*, *.ipynb_checkpoints*
